--- a/karpenter/node-pool-apps.yaml
+++ b/karpenter/node-pool-apps.yaml
@@ -14,7 +14,7 @@ spec:
           values: ["linux"]
         - key: karpenter.sh/capacity-type
           operator: In
-          values: ["spot"]
+          values: ["on-demand"]
         - key: karpenter.k8s.aws/instance-category
           operator: In
           values: ["c", "m", "r"]
@@ -28,7 +28,6 @@ spec:
   disruption:
     consolidationPolicy: WhenUnderutilized
     expireAfter: 720h # 30 * 24h = 720h
-
 ---
 apiVersion: karpenter.k8s.aws/v1beta1
 kind: EC2NodeClass
@@ -36,15 +35,15 @@ metadata:
   name: default
 spec:
   amiFamily: AL2 # Amazon Linux 2
-  amiSelectorTerms:
-    - id: ami-040d04b7b6b4ee64a
-    - name: eks-tester
-    # Select on any AMI that has both the "karpenter.sh/discovery: ${CLUSTER_NAME}" tag
-    # AND the "environment: test" tag OR any AMI with the "my-ami" name
-    # OR any AMI with ID "ami-123"
-    - tags:
-        karpenter.sh/discovery: "reproduction"
-        kubernetes:io/arch: "x86_64"
+  #amiSelectorTerms:
+  #  - id: ami-040d04b7b6b4ee64a
+  #  - name: eks-tester
+  #  # Select on any AMI that has both the "karpenter.sh/discovery: ${CLUSTER_NAME}" tag
+  #  # AND the "environment: test" tag OR any AMI with the "my-ami" name
+  #  # OR any AMI with ID "ami-123"
+  #  - tags:
+  #      karpenter.sh/discovery: "reproduction"
+  #      kubernetes:io/arch: "x86_64"
   role: "karpenter-reproduction-2024013019241487490000000e"
   subnetSelectorTerms:
     - tags:
