--- a/karpenter/values.yaml
+++ b/karpenter/values.yaml
@@ -30,7 +30,7 @@
 #  # -- Endpoint configuration for the ServiceMonitor.
 #  endpointConfig: {}
 ## -- Number of replicas.
-#replicas: 2
+replicas: 1
 ## -- The number of old ReplicaSets to retain to allow rollback.
 #revisionHistoryLimit: 10
 ## -- Strategy for updating the pod.
@@ -166,7 +166,7 @@
 #    # -- Error log level, defaults to 'error'
 #    webhook: error
 # -- Global Settings to configure Karpenter
-settings:
+#settings:
 #  # -- The maximum length of a batch window. The longer this is, the more pods we can consider for provisioning at one
 #  # time which usually results in fewer but larger nodes.
 #  batchMaxDuration: 10s
@@ -186,7 +186,7 @@ settings:
 #  clusterEndpoint: ""
 #  # -- If true then assume we can't reach AWS services which don't have a VPC endpoint
 #  # This also has the effect of disabling look-ups to the AWS pricing endpoint
-  isolatedVPC: true
+#  isolatedVPC: true
   # -- The VM memory overhead as a percent that will be subtracted from the total memory for all instance types
 #  vmMemoryOverheadPercent: 0.075
 #  # -- interruptionQueue is disabled if not specified. Enabling interruption handling may
